footer icon alignment corrected

--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@ footer{
 #footer-sidebar3 .sow-features-feature .textwidget{
 	margin-left: 1em;
 }
-#footer-sidebar3 .sow-icon-fontawesome{
+/*#footer-sidebar3 .sow-icon-fontawesome{
 	top: 8px;
-}
+}*/
 #footer-sidebar4 li, footer .widget-title{
 	list-style: none;
 	text-transform: uppercase;
